Добавление двух блоков
В приложении были добавлены два новых блока: "Прочее" и "Способности"

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -20,5 +20,7 @@
   "create": "Create",
   "new_character": "New character",
   "add_picture": "Add picture",
-  "save": "Save"
+  "save": "Save",
+  "abilities": "Abilities",
+  "other": "Other"
 }
