--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -20,5 +20,7 @@
   "create": "Создать",
   "new_character": "Новый персонаж",
   "add_picture": "Добавить изображение",
-  "save": "Сохранить"
+  "save": "Сохранить",
+  "abilities": "Способности",
+  "other": "Прочее"
 }
