--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -22,5 +22,11 @@
   "add_picture": "Добавить изображение",
   "save": "Сохранить",
   "abilities": "Способности",
-  "other": "Прочее"
+  "other": "Прочее",
+  "settings": "Настройки",
+  "colorScheme": "Цветовая схема",
+  "system": "Системная",
+  "light": "Светлая",
+  "dark": "Тёмная",
+  "appLanguage": "Язык приложения"
 }
