--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -1,197 +1,200 @@
 {
   "@@locale": "ru",
-  "app_name": "CharacterBook",
-  "male": "Мужской",
-  "female": "Женский",
-  "another": "Другой",
-  "name": "Имя",
-  "age": "Возраст",
-  "gender": "Гендер",
-  "biography": "Биография",
-  "character": "Персонаж",
-  "personality": "Характер",
-  "appearance": "Внешность",
-  "cancel": "Отмена",
-  "copy": "Копировать",
-  "ok": "Хорошо",
-  "export": "Экспорт",
-  "empty_list": "Здесь пусто!",
-  "edit": "Редактировать",
-  "create": "Создать",
-  "new_character": "Новый персонаж",
-  "add_picture": "Добавить изображение",
-  "save": "Сохранить",
-  "abilities": "Способности",
-  "other": "Прочее",
-  "settings": "Настройки",
-  "colorScheme": "Цветовая схема",
-  "system": "Системная",
-  "light": "Светлая",
-  "dark": "Тёмная",
-  "appLanguage": "Язык приложения",
-  "theme": "Тема",
-  "accentColor": "Акцентный цвет",
-  "backup": "Резервное копирование",
-  "createBackup": "Создать резервную копию",
-  "restoreData": "Восстановить данные",
   "aboutApp": "О приложении",
-  "developer": "Разработчик",
-  "version": "Версия",
-  "githubRepo": "GitHub репозиторий",
+  "abilities": "Способности",
+  "accentColor": "Акцентный цвет",
   "acknowledgements": "Благодарности",
-  "operationCompleted": "Операция выполнена успешно",
-  "error": "Ошибка",
-  "blue": "Синий",
-  "green": "Зеленый",
-  "red": "Красный",
-  "orange": "Оранжевый",
-  "purple": "Фиолетовый",
-  "pink": "Розовый",
-  "teal": "Бирюзовый",
-  "lightBlue": "Голубой",
-  "characters": "Персонажи",
-  "races": "Расы",
-  "posts": "Посты",
-  "search": "Поиск",
-  "language": "Язык",
-  "search_hint": "Поиск по персонажам, расам, заметкам и шаблонам...",
-  "no_data_found": "Данные не найдены",
-  "nothing_found": "Ничего не найдено по запросу",
-  "no_race": "Без расы",
-  "no_description": "Описание отсутствует",
-  "no_content": "Содержание отсутствует",
-  "fields_count": "{count} полей",
-  "templates": "Шаблоны",
-  "template_delete_title": "Удаление шаблона",
-  "template_delete_confirm": "Вы уверены, что хотите удалить этот шаблон?",
-  "template_deleted": "Шаблон удален",
-  "template_exists": "Шаблон уже существует",
-  "template_replace_confirm": "Шаблон \"{name}\" уже существует. Заменить его?",
-  "replace": "Заменить",
-  "import_cancelled": "Импорт отменен",
-  "template_imported": "Шаблон \"{name}\" успешно импортирован",
-  "import_error": "Ошибка импорта: {error}",
-  "select_template": "Выберите шаблон",
-  "no_templates": "Нет шаблонов",
-  "templates_not_found": "Шаблоны не найдены",
-  "import_template": "Импортировать шаблон",
-  "standard_fields": "Стандартные поля",
-  "custom_fields": "Пользовательские поля",
-  "create_character": "Создать персонажа",
-  "back": "Назад",
-  "import_template_tooltip": "Импорт шаблона",
-  "create_template_tooltip": "Создать шаблон",
-  "create_from_template_tooltip": "Создать из шаблона",
-  "delete": "Удалить",
-  "character_created_from_template": "Персонаж создан из шаблона \"{name}\"",
-  "new_template": "Новый шаблон",
-  "edit_template": "Редактирование",
-  "template_name_label": "Название шаблона",
-  "save_template": "Сохранить шаблон",
-  "main_image": "Основное изображение",
-  "reference_image": "Референс",
-  "additional_images": "Доп. изображения",
-  "new_race": "Новая раса",
-  "edit_race": "Редактировать расу",
-  "race_name": "Название расы",
-  "enter_race_name": "Введите название расы",
-  "description": "Описание",
-  "biology": "Биология",
-  "backstory": "Предыстория",
-  "save_race": "Сохранить расу",
-  "save_error": "Ошибка сохранения",
-  "race_delete_title": "Удаление расы",
-  "race_delete_confirm": "Вы уверены, что хотите удалить эту расу?",
-  "race_deleted": "Раса удалена",
-  "race_delete_error_title": "Невозможно удалить расу",
-  "race_delete_error_content": "Эта раса используется персонажами. Сначала измените их расу.",
-  "race_imported": "Раса \"{name}\" успешно импортирована",
-  "race_copied": "Раса скопирована в буфер",
-  "race_share_text": "Файл расы {name}",
-  "search_race_hint": "Поиск рас...",
-  "select_race": "Выберите расу",
-  "no_races_created": "Нет созданных рас",
-  "my": "Мои",
-  "select": "Выбрано",
-  "all_tags": "Все теги",
-  "all": "Все",
-  "new_character_from_template": "Новый персонаж (из шаблона)",
-  "no_additional_images": "Не добавлено ни одного изображение",
-  "enter_age": "Введите возраст",
-  "invalid_age": "Введён неверный возраст",
-  "template": "Шаблон",
-  "from_template": "Из шаблона",
-  "my_characters": "Мои персонажи",
-  "search_characters": "Поиск персонажей...",
-  "children": "Дети",
-  "young": "Молодые",
+  "add_picture": "Добавить изображение",
   "adults": "Взрослые",
-  "elderly": "Пожилые",
-  "short_name": "Короткое имя",
-  "a_to_z": "А-Я",
-  "z_to_a": "Я-А",
+  "age": "Возраст",
   "age_asc": "Возраст ↑",
   "age_desc": "Возраст ↓",
-  "character_imported": "Персонаж \"{name}\" успешно импортирован",
-  "select_character": "Выберите персонажа",
-  "years": "лет",
-  "no_characters": "Нет персонажей",
-  "import_character": "Импортировать персонажа",
-  "delete_error": "Ошибка при удалении",
-  "pdf_export_success": "PDF успешно экспортирован",
-  "export_error": "Ошибка экспорта",
-  "file_ready": "Файл готов к отправке",
-  "copied_to_clipboard": "Скопировано в буфер обмена",
-  "copy_error": "Ошибка копирования",
-  "character_avatar": "Аватар персонажа",
-  "character_reference": "Референс персонажа",
-  "character_gallery": "Галерея персонажа",
-  "no_information": "Нет информации",
-  "share_character": "Поделиться персонажем",
-  "file_character": "Файл (.character)",
-  "file_pdf": "Документ PDF (.pdf)",
-  "copy_character": "Скопировать персонажа",
-  "edit_character": "Редактировать персонажа",
-  "delete_character": "Удалить персонажа",
-  "last_updated": "Обновлено",
-  "basic_info": "Основная информация",
-  "race": "Раса",
-  "related_notes": "Связанные посты",
-  "character_deleted": "Персонаж удален",
-  "character_delete_title": "Удалить персонажа?",
-  "character_delete_confirm": "Вы уверены, что хотите удалить этого персонажа? Это действие нельзя отменить.",
-  "error_loading_notes": "Ошибка загрузки связанных постов",
-  "required_field_error": "Обязательное поле",
-  "select_gender_error": "Выберите пол",
-  "image": "Изображение",
-  "image_picker_error": "Ошибка при выборе изображения: {error}",
-  "not_selected": "Не выбрано",
-  "select_race_error": "Выберите расу",
-  "race_management": "Управление расами",
-  "character_share_text": "Файл персонажа {name}",
-  "markdown_bold": "Жирный",
-  "markdown_italic": "Курсив",
-  "markdown_underline": "Подчеркнутый",
-  "markdown_inline_code": "Код (inline)",
-  "markdown_quote": "Цитата",
-  "markdown_bullet_list": "Маркированный список",
-  "markdown_numbered_list": "Нумерованный список",
-  "template_exported": "Шаблон \"{name}\" успешно экспортирован",
-  "file_pick_error": "Ошибка выбора файла",
-  "select_template_file": "Выберите файл шаблона",
-  "web_not_supported": "Недоступно для веба",
-  "unsaved_changes_title": "Несохраненные изменения",
-  "unsaved_changes_content": "У вас есть несохраненные изменения. Хотите сохранить перед выходом?",
-  "discard_changes": "Не сохранять",
-  "cloud_backup_full_success": "Полная резервная копия успешно создана в Google Drive",
-  "cloud_backup_error": "Ошибка при создании резервной копии",
-  "cloud_backup_characters_success": "Резервная копия персонажей успешно создана",
-  "cloud_backup_characters_error": "Ошибка при создании резервной копии персонажей",
+  "all": "Все",
+  "all_tags": "Все теги",
+  "another": "Другой",
+  "appLanguage": "Язык приложения",
+  "app_name": "CharacterBook",
+  "appearance": "Внешность",
   "auth_cancelled": "Авторизация отменена",
   "auth_client_error": "Не удалось получить клиент для API",
-  "cloud_export_error": "Ошибка при экспорте в Google Drive",
-  "cloud_restore_success": "Успешно восстановлено:\n{charactersCount} персонажей\n{notesCount} заметок\n{racesCount} рас\n{templatesCount} шаблонов",
-  "cloud_restore_error": "Ошибка при восстановлении данных",
+  "back": "Назад",
+  "backup": "Резервное копирование",
+  "basic_info": "Основная информация",
+  "biography": "Биография",
+  "biology": "Биология",
+  "blue": "Синий",
+  "cancel": "Отмена",
+  "character": "Персонаж",
+  "character_avatar": "Аватар персонажа",
+  "character_created_from_template": "Персонаж создан из шаблона \"{name}\"",
+  "character_delete_confirm": "Вы уверены, что хотите удалить этого персонажа? Это действие нельзя отменить.",
+  "character_delete_title": "Удалить персонажа?",
+  "character_deleted": "Персонаж удален",
+  "character_exported": "Персонаж \"{name}\" успешно экспортирован",
+  "character_gallery": "Галерея персонажа",
+  "character_imported": "Персонаж \"{name}\" успешно импортирован",
+  "character_management": "Управление персонажами",
+  "character_reference": "Референс персонажа",
+  "character_share_text": "Файл персонажа {name}",
+  "characters": "Персонажи",
+  "children": "Дети",
+  "cloud_backup_characters_error": "Ошибка при создании резервной копии персонажей",
+  "cloud_backup_characters_success": "Резервная копия персонажей успешно создана",
+  "cloud_backup_error": "Ошибка при создании резервной копии",
+  "cloud_backup_full_success": "Полная резервная копия успешно создана в Google Drive",
   "cloud_backup_not_found": "Резервные копии не найдены",
-  "cloud_import_error": "Ошибка при импорте из Google Drive"
+  "cloud_export_error": "Ошибка при экспорте в Google Drive",
+  "cloud_import_error": "Ошибка при импорте из Google Drive",
+  "cloud_restore_error": "Ошибка при восстановлении данных",
+  "cloud_restore_success": "Успешно восстановлено:\n{charactersCount} персонажей\n{notesCount} заметок\n{racesCount} рас\n{templatesCount} шаблонов",
+  "colorScheme": "Цветовая схема",
+  "copy": "Копировать",
+  "copy_character": "Скопировать персонажа",
+  "copy_error": "Ошибка копирования",
+  "copied_to_clipboard": "Скопировано в буфер обмена",
+  "create": "Создать",
+  "createBackup": "Создать резервную копию",
+  "create_character": "Создать персонажа",
+  "create_from_template_tooltip": "Создать из шаблона",
+  "create_template_tooltip": "Создать шаблон",
+  "create_template": "Создать шаблон",
+  "custom_fields": "Пользовательские поля",
+  "dark": "Тёмная",
+  "delete": "Удалить",
+  "delete_character": "Удалить персонажа",
+  "delete_error": "Ошибка при удалении",
+  "description": "Описание",
+  "developer": "Разработчик",
+  "discard_changes": "Не сохранять",
+  "edit": "Редактировать",
+  "edit_character": "Редактировать персонажа",
+  "edit_race": "Редактировать расу",
+  "edit_template": "Редактирование",
+  "elderly": "Пожилые",
+  "empty_list": "Здесь пусто!",
+  "enter_age": "Введите возраст",
+  "enter_race_name": "Введите название расы",
+  "error": "Ошибка",
+  "error_loading_notes": "Ошибка загрузки связанных постов",
+  "export": "Экспорт в PDF",
+  "export_error": "Ошибка экспорта",
+  "female": "Женский",
+  "file_character": "Файл (.character)",
+  "file_pdf": "Документ PDF (.pdf)",
+  "file_pick_error": "Ошибка выбора файла",
+  "file_ready": "Файл готов к отправке",
+  "fields_count": "{count} полей",
+  "from_template": "Из шаблона",
+  "gender": "Гендер",
+  "githubRepo": "GitHub репозиторий",
+  "green": "Зеленый",
+  "image": "Изображение",
+  "image_picker_error": "Ошибка при выборе изображения: {error}",
+  "import_cancelled": "Импорт отменен",
+  "import_character": "Импортировать персонажа",
+  "import_error": "Ошибка импорта: {error}",
+  "import_template": "Импортировать шаблон",
+  "import_template_tooltip": "Импорт шаблона",
+  "invalid_age": "Введён неверный возраст",
+  "language": "Язык",
+  "last_updated": "Обновлено",
+  "light": "Светлая",
+  "lightBlue": "Голубой",
+  "main_image": "Основное изображение",
+  "male": "Мужской",
+  "markdown_bold": "Жирный",
+  "markdown_bullet_list": "Маркированный список",
+  "markdown_inline_code": "Код (inline)",
+  "markdown_italic": "Курсив",
+  "markdown_numbered_list": "Нумерованный список",
+  "markdown_quote": "Цитата",
+  "markdown_underline": "Подчеркнутый",
+  "my": "Мои",
+  "my_characters": "Мои персонажи",
+  "name": "Имя",
+  "new_character": "Новый персонаж",
+  "new_character_from_template": "Новый персонаж (из шаблона)",
+  "new_race": "Новая раса",
+  "new_template": "Новый шаблон",
+  "no_additional_images": "Не добавлено ни одного изображение",
+  "no_characters": "Нет персонажей",
+  "no_content": "Содержание отсутствует",
+  "no_data_found": "Данные не найдены",
+  "no_description": "Описание отсутствует",
+  "no_information": "Нет информации",
+  "no_race": "Без расы",
+  "no_races_created": "Нет созданных рас",
+  "no_templates": "Нет шаблонов",
+  "not_selected": "Не выбрано",
+  "nothing_found": "Ничего не найдено по запросу",
+  "ok": "Хорошо",
+  "operationCompleted": "Операция выполнена успешно",
+  "orange": "Оранжевый",
+  "other": "Прочее",
+  "pdf_export_success": "PDF успешно экспортирован",
+  "personality": "Характер",
+  "pink": "Розовый",
+  "posts": "Посты",
+  "purple": "Фиолетовый",
+  "race": "Раса",
+  "race_copied": "Раса скопирована в буфер",
+  "race_delete_confirm": "Вы уверены, что хотите удалить эту расу?",
+  "race_delete_error_content": "Эта раса используется персонажами. Сначала измените их расу.",
+  "race_delete_error_title": "Невозможно удалить расу",
+  "race_delete_title": "Удаление расы",
+  "race_deleted": "Раса удалена",
+  "race_imported": "Раса \"{name}\" успешно импортирована",
+  "race_management": "Управление расами",
+  "race_name": "Название расы",
+  "race_share_text": "Файл расы {name}",
+  "races": "Расы",
+  "red": "Красный",
+  "reference_image": "Референс",
+  "related_notes": "Связанные посты",
+  "replace": "Заменить",
+  "required_field_error": "Обязательное поле",
+  "restoreData": "Восстановить данные",
+  "save": "Сохранить",
+  "save_error": "Ошибка сохранения",
+  "save_race": "Сохранить расу",
+  "save_template": "Сохранить шаблон",
+  "search": "Поиск",
+  "search_characters": "Поиск персонажей...",
+  "search_hint": "Поиск по персонажам, расам, заметкам и шаблонам...",
+  "search_race_hint": "Поиск рас...",
+  "select": "Выбрано",
+  "select_character": "Выберите персонажа",
+  "select_gender_error": "Выберите пол",
+  "select_race": "Выберите расу",
+  "select_race_error": "Выберите расу",
+  "select_template": "Выберите шаблон",
+  "select_template_file": "Выберите файл шаблона",
+  "settings": "Настройки",
+  "share_character": "Поделиться",
+  "short_name": "Короткое имя",
+  "standard_fields": "Стандартные поля",
+  "system": "Системная",
+  "template": "Шаблон",
+  "template_delete_confirm": "Вы уверены, что хотите удалить этот шаблон?",
+  "template_delete_title": "Удаление шаблона",
+  "template_deleted": "Шаблон удален",
+  "template_exists": "Шаблон уже существует",
+  "template_exported": "Шаблон \"{name}\" успешно экспортирован",
+  "template_imported": "Шаблон \"{name}\" успешно импортирован",
+  "template_name_label": "Название шаблона",
+  "template_replace_confirm": "Шаблон \"{name}\" уже существует. Заменить его?",
+  "templates": "Шаблоны",
+  "templates_not_found": "Шаблоны не найдены",
+  "teal": "Бирюзовый",
+  "theme": "Тема",
+  "unsaved_changes_content": "У вас есть несохраненные изменения. Хотите сохранить перед выходом?",
+  "unsaved_changes_title": "Несохраненные изменения",
+  "version": "Версия",
+  "web_not_supported": "Недоступно для веба",
+  "years": "лет",
+  "young": "Молодые",
+  "a_to_z": "А-Я",
+  "z_to_a": "Я-А",
+  "additional_images": "Доп. изображения",
+  "backstory": "Предыстория"
 }
