--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,197 +1,194 @@
 {
   "@@locale": "en",
-  "app_name": "CharacterBook",
-  "male": "Male",
-  "female": "Female",
-  "another": "Other",
-  "name": "Name",
-  "age": "Age",
-  "gender": "Gender",
-  "biography": "Biography",
-  "character": "Character",
-  "personality": "Personality",
-  "appearance": "Appearance",
-  "cancel": "Cancel",
-  "copy": "Copy",
-  "ok": "OK",
-  "export": "Export",
-  "empty_list": "It's empty here!",
-  "edit": "Edit",
-  "create": "Create",
-  "new_character": "New Character",
-  "add_picture": "Add Image",
-  "save": "Save",
-  "abilities": "Abilities",
-  "other": "Other",
-  "settings": "Settings",
-  "colorScheme": "Color Scheme",
-  "system": "System",
-  "light": "Light",
-  "dark": "Dark",
-  "appLanguage": "App Language",
-  "theme": "Theme",
-  "accentColor": "Accent Color",
-  "backup": "Backup",
-  "createBackup": "Create Backup",
-  "restoreData": "Restore Data",
   "aboutApp": "About App",
-  "developer": "Developer",
-  "version": "Version",
-  "githubRepo": "GitHub Repository",
+  "accentColor": "Accent Color",
   "acknowledgements": "Acknowledgements",
-  "operationCompleted": "Operation completed successfully",
-  "error": "Error",
-  "blue": "Blue",
-  "green": "Green",
-  "red": "Red",
-  "orange": "Orange",
-  "purple": "Purple",
-  "pink": "Pink",
-  "teal": "Teal",
-  "lightBlue": "Light Blue",
-  "characters": "Characters",
-  "races": "Races",
-  "posts": "Posts",
-  "search": "Search",
-  "language": "Language",
-  "search_hint": "Search for characters, races, notes, and templates...",
-  "no_data_found": "No data found",
-  "nothing_found": "Nothing found for the query",
-  "no_race": "No race",
-  "no_description": "No description",
-  "no_content": "No content",
-  "fields_count": "{count} fields",
-  "templates": "Templates",
-  "template_delete_title": "Delete Template",
-  "template_delete_confirm": "Are you sure you want to delete this template?",
-  "template_deleted": "Template deleted",
-  "template_exists": "Template already exists",
-  "template_replace_confirm": "Template \"{name}\" already exists. Replace it?",
-  "replace": "Replace",
-  "import_cancelled": "Import cancelled",
-  "template_imported": "Template \"{name}\" imported successfully",
-  "import_error": "Import error: {error}",
-  "select_template": "Select Template",
-  "no_templates": "No templates",
-  "templates_not_found": "No templates found",
-  "import_template": "Import Template",
-  "standard_fields": "Standard Fields",
-  "custom_fields": "Custom Fields",
-  "create_character": "Create Character",
-  "back": "Back",
-  "import_template_tooltip": "Import Template",
-  "create_template_tooltip": "Create Template",
-  "create_from_template_tooltip": "Create from Template",
-  "delete": "Delete",
-  "character_created_from_template": "Character created from template \"{name}\"",
-  "new_template": "New Template",
-  "edit_template": "Edit",
-  "template_name_label": "Template Name",
-  "save_template": "Save Template",
-  "main_image": "Main Image",
-  "reference_image": "Reference",
+  "add_picture": "Add Image",
   "additional_images": "Additional Images",
-  "new_race": "New Race",
-  "edit_race": "Edit Race",
-  "race_name": "Race Name",
-  "enter_race_name": "Enter race name",
-  "description": "Description",
-  "biology": "Biology",
-  "backstory": "Backstory",
-  "save_race": "Save Race",
-  "save_error": "Save Error",
-  "race_delete_title": "Delete Race",
-  "race_delete_confirm": "Are you sure you want to delete this race?",
-  "race_deleted": "Race deleted",
-  "race_delete_error_title": "Cannot Delete Race",
-  "race_delete_error_content": "This race is used by characters. Change their race first.",
-  "race_imported": "Race \"{name}\" imported successfully",
-  "race_copied": "Race copied to clipboard",
-  "race_share_text": "Race file {name}",
-  "search_race_hint": "Search races...",
-  "select_race": "Select Race",
-  "no_races_created": "No races created",
-  "my": "My",
-  "select": "Selected",
-  "all_tags": "All Tags",
-  "all": "All",
-  "new_character_from_template": "New Character (from Template)",
-  "no_additional_images": "No images added",
-  "enter_age": "Enter age",
-  "invalid_age": "Invalid age entered",
-  "template": "Template",
-  "from_template": "From Template",
-  "my_characters": "My Characters",
-  "search_characters": "Search characters...",
-  "children": "Children",
-  "young": "Young",
   "adults": "Adults",
-  "elderly": "Elderly",
-  "short_name": "Short Name",
-  "a_to_z": "A-Z",
-  "z_to_a": "Z-A",
+  "age": "Age",
   "age_asc": "Age ↑",
   "age_desc": "Age ↓",
-  "character_imported": "Character \"{name}\" imported successfully",
-  "select_character": "Select Character",
-  "years": "years",
-  "no_characters": "No characters",
-  "import_character": "Import Character",
-  "delete_error": "Delete Error",
-  "pdf_export_success": "PDF exported successfully",
-  "export_error": "Export Error",
-  "file_ready": "File ready to send",
-  "copied_to_clipboard": "Copied to clipboard",
-  "copy_error": "Copy Error",
-  "character_avatar": "Character Avatar",
-  "character_reference": "Character Reference",
-  "character_gallery": "Character Gallery",
-  "no_information": "No Information",
-  "share_character": "Share Character",
-  "file_character": "File (.character)",
-  "file_pdf": "PDF Document (.pdf)",
-  "copy_character": "Copy Character",
-  "edit_character": "Edit Character",
-  "delete_character": "Delete Character",
-  "last_updated": "Last Updated",
-  "basic_info": "Basic Info",
-  "race": "Race",
-  "related_notes": "Related Posts",
-  "character_deleted": "Character deleted",
-  "character_delete_title": "Delete Character?",
-  "character_delete_confirm": "Are you sure you want to delete this character? This action cannot be undone.",
-  "error_loading_notes": "Error loading related posts",
-  "required_field_error": "Required field",
-  "select_gender_error": "Select gender",
-  "image": "Image",
-  "image_picker_error": "Image selection error: {error}",
-  "not_selected": "Not selected",
-  "select_race_error": "Select race",
-  "race_management": "Race Management",
-  "character_share_text": "Character file {name}",
-  "markdown_bold": "Bold",
-  "markdown_italic": "Italic",
-  "markdown_underline": "Underline",
-  "markdown_inline_code": "Code (inline)",
-  "markdown_quote": "Quote",
-  "markdown_bullet_list": "Bullet List",
-  "markdown_numbered_list": "Numbered List",
-  "template_exported": "Template \"{name}\" exported successfully",
-  "file_pick_error": "File selection error",
-  "select_template_file": "Select Template File",
-  "web_not_supported": "Not available for web",
-  "unsaved_changes_title": "Unsaved Changes",
-  "unsaved_changes_content": "You have unsaved changes. Do you want to save before exiting?",
-  "discard_changes": "Discard",
-  "cloud_backup_full_success": "Full backup successfully created in Google Drive",
-  "cloud_backup_error": "Backup Error",
-  "cloud_backup_characters_success": "Characters backup created successfully",
-  "cloud_backup_characters_error": "Error creating characters backup",
+  "all": "All",
+  "all_tags": "All Tags",
+  "another": "Other",
+  "appLanguage": "App Language",
+  "app_name": "CharacterBook",
+  "appearance": "Appearance",
   "auth_cancelled": "Authorization cancelled",
   "auth_client_error": "Failed to get API client",
-  "cloud_export_error": "Google Drive export error",
-  "cloud_restore_success": "Successfully restored:\n{charactersCount} characters\n{notesCount} notes\n{racesCount} races\n{templatesCount} templates",
-  "cloud_restore_error": "Restore Error",
+  "back": "Back",
+  "backup": "Backup",
+  "basic_info": "Basic Info",
+  "biology": "Biology",
+  "backstory": "Backstory",
+  "blue": "Blue",
+  "cancel": "Cancel",
+  "character": "Character",
+  "character_avatar": "Character Avatar",
+  "character_created_from_template": "Character created from template \"{name}\"",
+  "character_delete_confirm": "Are you sure you want to delete this character? This action cannot be undone.",
+  "character_delete_title": "Delete Character?",
+  "character_deleted": "Character deleted",
+  "character_gallery": "Character Gallery",
+  "character_imported": "Character \"{name}\" imported successfully",
+  "character_reference": "Character Reference",
+  "character_share_text": "Character file {name}",
+  "characters": "Characters",
+  "children": "Children",
+  "cloud_backup_characters_error": "Error creating characters backup",
+  "cloud_backup_characters_success": "Characters backup created successfully",
+  "cloud_backup_error": "Backup Error",
+  "cloud_backup_full_success": "Full backup successfully created in Google Drive",
   "cloud_backup_not_found": "No backups found",
-  "cloud_import_error": "Google Drive import error"
+  "cloud_export_error": "Google Drive export error",
+  "cloud_import_error": "Google Drive import error",
+  "cloud_restore_error": "Restore Error",
+  "cloud_restore_success": "Successfully restored:\n{charactersCount} characters\n{notesCount} notes\n{racesCount} races\n{templatesCount} templates",
+  "colorScheme": "Color Scheme",
+  "copy": "Copy",
+  "copy_character": "Copy Character",
+  "copy_error": "Copy Error",
+  "copied_to_clipboard": "Copied to clipboard",
+  "create": "Create",
+  "createBackup": "Create Backup",
+  "create_character": "Create Character",
+  "create_from_template_tooltip": "Create from Template",
+  "create_template_tooltip": "Create Template",
+  "custom_fields": "Custom Fields",
+  "dark": "Dark",
+  "delete": "Delete",
+  "delete_error": "Delete Error",
+  "description": "Description",
+  "developer": "Developer",
+  "discard_changes": "Discard",
+  "edit": "Edit",
+  "edit_character": "Edit Character",
+  "edit_race": "Edit Race",
+  "edit_template": "Edit",
+  "elderly": "Elderly",
+  "empty_list": "It's empty here!",
+  "enter_age": "Enter age",
+  "enter_race_name": "Enter race name",
+  "error": "Error",
+  "error_loading_notes": "Error loading related posts",
+  "export": "Export",
+  "export_error": "Export Error",
+  "female": "Female",
+  "fields_count": "{count} fields",
+  "file_character": "File (.character)",
+  "file_pdf": "PDF Document (.pdf)",
+  "file_pick_error": "File selection error",
+  "file_ready": "File ready to send",
+  "from_template": "From Template",
+  "gender": "Gender",
+  "githubRepo": "GitHub Repository",
+  "green": "Green",
+  "image": "Image",
+  "image_picker_error": "Image selection error: {error}",
+  "import_cancelled": "Import cancelled",
+  "import_character": "Import Character",
+  "import_error": "Import error: {error}",
+  "import_template": "Import Template",
+  "import_template_tooltip": "Import Template",
+  "invalid_age": "Invalid age entered",
+  "language": "Language",
+  "last_updated": "Last Updated",
+  "light": "Light",
+  "lightBlue": "Light Blue",
+  "main_image": "Main Image",
+  "male": "Male",
+  "markdown_bold": "Bold",
+  "markdown_bullet_list": "Bullet List",
+  "markdown_inline_code": "Code (inline)",
+  "markdown_italic": "Italic",
+  "markdown_numbered_list": "Numbered List",
+  "markdown_quote": "Quote",
+  "markdown_underline": "Underline",
+  "my": "My",
+  "my_characters": "My Characters",
+  "name": "Name",
+  "new_character": "New Character",
+  "new_character_from_template": "New Character (from Template)",
+  "new_race": "New Race",
+  "new_template": "New Template",
+  "no_additional_images": "No images added",
+  "no_characters": "No characters",
+  "no_content": "No content",
+  "no_data_found": "No data found",
+  "no_description": "No description",
+  "no_information": "No Information",
+  "no_race": "No race",
+  "no_races_created": "No races created",
+  "no_templates": "No templates",
+  "not_selected": "Not selected",
+  "nothing_found": "Nothing found for the query",
+  "ok": "OK",
+  "operationCompleted": "Operation completed successfully",
+  "orange": "Orange",
+  "other": "Other",
+  "pdf_export_success": "PDF exported successfully",
+  "personality": "Personality",
+  "pink": "Pink",
+  "posts": "Posts",
+  "purple": "Purple",
+  "race": "Race",
+  "race_copied": "Race copied to clipboard",
+  "race_delete_confirm": "Are you sure you want to delete this race?",
+  "race_delete_error_content": "This race is used by characters. Change their race first.",
+  "race_delete_error_title": "Cannot Delete Race",
+  "race_delete_title": "Delete Race",
+  "race_deleted": "Race deleted",
+  "race_imported": "Race \"{name}\" imported successfully",
+  "race_management": "Race Management",
+  "race_name": "Race Name",
+  "race_share_text": "Race file {name}",
+  "races": "Races",
+  "reference_image": "Reference",
+  "related_notes": "Related Posts",
+  "replace": "Replace",
+  "required_field_error": "Required field",
+  "restoreData": "Restore Data",
+  "save": "Save",
+  "save_error": "Save Error",
+  "save_race": "Save Race",
+  "save_template": "Save Template",
+  "search": "Search",
+  "search_characters": "Search characters...",
+  "search_hint": "Search for characters, races, notes, and templates...",
+  "search_race_hint": "Search races...",
+  "select": "Selected",
+  "select_character": "Select Character",
+  "select_gender_error": "Select gender",
+  "select_race": "Select Race",
+  "select_race_error": "Select race",
+  "select_template": "Select Template",
+  "select_template_file": "Select Template File",
+  "settings": "Settings",
+  "share_character": "Share Character",
+  "share_plus": "Share",
+  "short_name": "Short Name",
+  "standard_fields": "Standard Fields",
+  "system": "System",
+  "teal": "Teal",
+  "template": "Template",
+  "template_delete_confirm": "Are you sure you want to delete this template?",
+  "template_delete_title": "Delete Template",
+  "template_deleted": "Template deleted",
+  "template_exists": "Template already exists",
+  "template_exported": "Template \"{name}\" exported successfully",
+  "template_imported": "Template \"{name}\" imported successfully",
+  "template_name_label": "Template Name",
+  "template_replace_confirm": "Template \"{name}\" already exists. Replace it?",
+  "templates": "Templates",
+  "templates_not_found": "No templates found",
+  "theme": "Theme",
+  "unsaved_changes_content": "You have unsaved changes. Do you want to save before exiting?",
+  "unsaved_changes_title": "Unsaved Changes",
+  "version": "Version",
+  "web_not_supported": "Not available for web",
+  "years": "years",
+  "young": "Young",
+  "a_to_z": "A-Z",
+  "z_to_a": "Z-A"
 }
